css/styles.css
/* =============================================================================
   My CSS
   ========================================================================== */

/* ---- base ---- */

html,body{
  margin: 0;
  padding: 0;
	width:100%;
	height:100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
}

body{
}

canvas{
  display:block;
  vertical-align:bottom;
}

/* ---- MAIN ----*/
#homepage-main{
  font-family: Averia Serif Libre, sans-serif;
  color: #fafafa;
  background-image: url("../img/Forest.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50% 50%;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

#particles-js{
  width: 100%;
  height: 100%;
  position: absolute;
}

#site-nav {
  background-color: rgba(111, 119, 132, 0.7);
}

#brand-icon{
  cursor: pointer;
}

#nav-links hr {
  border-top: 2px solid white;
}

#nav-links a{
  color: #f8f8f8;
}
#nav-links a.group2{
  color: blue;
}
#homepage-content{
  position: absolute;
  bottom: 40px;
  left: 40px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
}

#homepage-content h1{
  font-size: 45px;
  font-size: 5vmax;
}

#cv-main{
  text-align: center;
  color: #f8f8f8;
  background-color: grey;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50% 50%;
  width: 100%;
  height: 100%;
  border-top: 5px solid black;
}

#name {
  font-size: 40px;
  font-weight: bold;
  display: inline;
}
#title {
  font-size: 16px;
  color: black;
  font-weight: normal;
}

/*navbar icon*/
#nav-icon {
  right: 15px;
  width: 60px;
  height: 45px;
  position: absolute;
  -webkit-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .5s ease-in-out;
  transition: .5s ease-in-out;
  cursor: pointer;
}
#nav-icon span {
  display: block;
  position: absolute;
  height: 9px;
  width: 50%;
  background: #fafafa;
  opacity: 1;
  -webkit-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .25s ease-in-out;
  transition: .25s ease-in-out;
}
#nav-icon span:nth-child(even) {
  left: 50%;
  border-radius: 0 9px 9px 0;
}
#nav-icon span:nth-child(odd) {
  left:0px;
  border-radius: 9px 0 0 9px;
}
#nav-icon span:nth-child(1), #nav-icon span:nth-child(2) {
  top: 0px;
}
#nav-icon span:nth-child(3), #nav-icon span:nth-child(4) {
  top: 15px;
}
#nav-icon span:nth-child(5), #nav-icon span:nth-child(6) {
  top: 30px;
}
#nav-icon.open span:nth-child(1),#nav-icon.open span:nth-child(6) {
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
}
#nav-icon.open span:nth-child(2),#nav-icon.open span:nth-child(5) {
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
}
#nav-icon.open span:nth-child(1) {
  left: 5px;
  top: 7px;
}
#nav-icon.open span:nth-child(2) {
  left: calc(50% - 5px);
  top: 7px;
}
#nav-icon.open span:nth-child(3) {
  left: -50%;
  opacity: 0;
}
#nav-icon.open span:nth-child(4) {
  left: 100%;
  opacity: 0;
}
#nav-icon.open span:nth-child(5) {
  left: 5px;
  top: 29px;
}
#nav-icon.open span:nth-child(6) {
  left: calc(50% - 5px);
  top: 29px;
}


/* RESUME */
/*body,
div,
ul,
li,
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  padding: 0;
  margin: 0;
  font-family: Averia Serif Libre, sans-serif;
}

.clear-fix {
  overflow: auto;
}

.education-entry,
.onlineCourse-entry,
.work-entry,
.project-entry {
  padding: 0 5%;
}

h1 {
  font-size: 40px;
  color: steelblue;
  line-height: 48px;
  display: inline;
}

h2 {
  font-weight: bold;
  font-size: 24px;
  color: #999;
  line-height: 29px;
  padding: 10px;
}

h3 {
  font-style: italic;
  font-size: 20px;
  color: #000;
  line-height: 22px;
}

h4 {
  font-weight: bold;
  font-size: 14px;
  color: #4a4a4a;
  line-height: 17px;
}

h2,
h3,
h4,
h5 {
  padding: 10px 5%;
}

.date-text {
  font-style: italic;
  font-size: 14px;
  color: #999;
  line-height: 16px;
  float: left;
}

.location-text {
  font-style: italic;
  font-size: 14px;
  color: #999;
  line-height: 16px;
  float: right;

}

p {
  font-size: 14px;
  color: #333;
  line-height: 21px;
}

a {
  color: #1199c3;
  text-decoration: none;
  margin-top: 10px;
  display: block;
}

.welcome-message {
  font-style: italic;
  font-size: 18px;
  color: #f3f3f3;
  line-height: 28px;
}

#languages-h3,
#skills-h3 {
  color: steelblue;
}

.blue {
  background-color: steelblue;
}

.blue-text {
  color: steelblue;
}

.white-text {
  font-weight: bold;
  color: #fff;
}

.gray {
  background-color: #f3f3f3;
  padding-bottom: 10px;
  clear: both;
}

.dark-gray {
  background-color: #4a4a4a;
}


#header,
#headerLanguages,
#headerSkills {
  background-color: #484848;
}

.flex-box {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  padding: 10px;
}

.flex-column {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
  padding: 10px;
}

.center-content {
  padding: 2.5% 5%;
}

ul {
  list-style-type: none;
}

.biopic {
  float: left;
  padding: 10px;
  width: 200px;
  display: none;
}

img {
  padding: 10px;
  width: 40%;
}

span {
  padding: 5px;
}

#footerMessage {
  text-align: center;
}

@media only screen and (max-width: 1024px) {
  #footerMessage {
    margin-top: 5%;
  }
}

@media only screen and (max-width:900px) {
  .biopic {
    width: 175px;
  }
}

@media only screen and (max-width: 750px) {
  #footerMessage {
    margin-top: 10%;
  }
  .biopic {
    width: 150px;
  }
  .welcome-message {
    display: none;
  }
}

#map {
  display: block;
  height: 100%;
  margin: 0 5%;
  background-color: steelblue;
}

#mapDiv {
  background-color: steelblue;
  height: 400px;
  width: 100%;
  padding-bottom: 5%;
}

@media only screen and (min-width: 750px) {
  #languages-h3,
  #skills-h3,
  .biopic {
    display: block;
  }
}*/
}

